@@ -1,5 +1,6 @@
-#A package
+
 
 from tdh.metadata.sources.activities import ActivitiesQuerySourceFactory
 from tdh.metadata.sources.research_keywords import \
         ResearchKeywordQuerySourceFactory
+from tdh.metadata.sources.users import UserQuerySourceFactory
