@@ -4,6 +4,9 @@ Changelog
 0.1dev (unreleased)
 ----------------------
 
+- Added a UserQuerySource for loading user information from ITR's Oracle 
+  database.
+  [David]
 - Made the database configuration much more modular.  We can now specify
   essentially all configuration in the buildout.cfg files and have our product
   load our SQLAlchemy connection up for us.  Then we only need to specify
